--- a/test/gap-web-components.expect.css
+++ b/test/gap-web-components.expect.css
@@ -9,7 +9,7 @@
 
 .gap-and-no-flex > * {
 	/* -fgp */
-	pointer-events: var(--parent-has-fgp) initial;
+	pointer-events: var(--parent-has-fgp) auto;
 	--fgp-parent-gap-row: 20px;
 	--fgp-margin-top: var(--parent-has-fgp) calc(var(--fgp-gap-row) + var(--orig-margin-top, 0px));
 	margin-top: var(--fgp-margin-top);
@@ -43,7 +43,7 @@
 	/* -fgp */
 	--parent-has-fgp: !important;
 	--orig-margin-top: initial;
-	pointer-events: var(--parent-has-fgp) initial;
+	pointer-events: var(--parent-has-fgp) auto;
 	--fgp-parent-gap-row: 20px;
 	--fgp-margin-top: var(--parent-has-fgp) calc(var(--fgp-gap-row) + var(--orig-margin-top, 0px));
 	margin-top: var(--fgp-margin-top);
