--- a/test/testing.expect.css
+++ b/test/testing.expect.css
@@ -16,7 +16,7 @@ body {
 	/* -fgp */
 	--parent-has-fgp: !important;
 	--orig-margin-top: initial;
-	pointer-events: var(--parent-has-fgp) initial;
+	pointer-events: var(--parent-has-fgp) auto;
 	--fgp-parent-gap-row: 20px;
 	--fgp-margin-top: var(--parent-has-fgp) calc(var(--fgp-gap-row) + var(--orig-margin-top, 0px));
 	margin-top: var(--fgp-margin-top);
